--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
     
     <!-- Botón para descargar CV -->
   
-      <a href="/Users/pablospena/Desktop/portfolio/CVPABLOSPENA2025.pdf" download class="cv-button">
+      <a href="CVPABLOSPENA2025.pdf" download class="cv-button">
         <i class="fas fa-download"></i> Descargar CV (PDF)
       </a>
   
